- Added content alignment view transition property - Fixed unifying id util

--- a/src/utils/ViewTransition/Snapshot.module.css
+++ b/src/utils/ViewTransition/Snapshot.module.css
@@ -1,7 +1,26 @@
+.snapshotWrapper {
+  position: relative;
+}
+
 .snapshotContainer {
   display: flex;
-  height: 100%;
-  width: 100%;
+  position: absolute;
+}
+
+.snapshotContainer.top {
+  top: 0;
+}
+
+.snapshotContainer.right {
+  right: 0;
+}
+
+.snapshotContainer.bottom {
+  bottom: 0;
+}
+
+.snapshotContainer.left {
+  left: 0;
 }
 
 .snapshotContainer > * {
